JumpScript/tests/baselines/reference/unusedFunctionsinNamespaces4.errors.txt
tests/cases/compiler/unusedFunctionsinNamespaces4.jump(2,9): error TS6133: 'function1' is declared but its value is never read.


==== tests/cases/compiler/unusedFunctionsinNamespaces4.jump (1 errors) ====
    namespace Validation {
        var function1 = function() {
            ~~~~~~~~~
!!! error TS6133: 'function1' is declared but its value is never read.
        }
    
        export function function2() {
    
        }
    }